--- a/SmallAPP/package.json
+++ b/SmallAPP/package.json
@@ -10,16 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-gesture-handler": "^2.11.0",
     "react-native-keyboard-manager": "^6.5.11-1",
-    "react-native-safe-area-context": "^4.5.3",
     "react-native-reanimated": "3.1.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-redux": "^8.0.7",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
